tests/toy/pos/000106_cdrc2.toylang
program a = { if 0 then while a do sleep else sleep; } .
