tests/toy/neg/000618_mutation.toylang
program a = { a = a == a do; } .
